Update the default configuration file

--- a/templates/Flame.HotPins.cfg
+++ b/templates/Flame.HotPins.cfg
@@ -16,4 +16,7 @@ Keypad6 = "Hammer" "Infested mine"
 # Or you can use keyboard shortcuts. For this use "+" sign
 LeftAlt+Keypad1 = "Ball" "Copper"
 LeftAlt+Keypad2 = "Ball" "Tin"
+LeftAlt+Keypad3 = "Ball" "Guck"
 LeftAlt+Keypad4 = "Ball" "Silver"
+LeftAlt+Keypad5 = "Ball" "Tar"
+LeftAlt+Keypad6 = "Ball" "Marble"
