--- a/HotPins.csproj
+++ b/HotPins.csproj
@@ -1,92 +1,81 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props"
-        Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-
-    <!-- General properties -->
-    <PropertyGroup>
-        <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-        <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{A54EAD47-A0E4-471F-91DC-904BF21E3F0E}</ProjectGuid>
-        <OutputType>Library</OutputType>
-        <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>HotPins</RootNamespace>
-        <AssemblyName>HotPins</AssemblyName>
-        <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-        <FileAlignment>512</FileAlignment>
-        <Deterministic>true</Deterministic>
-    </PropertyGroup>
-
-    <!-- Properties for Debug and Release -->
-    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-        <DebugType>pdbonly</DebugType>
-        <Optimize>false</Optimize>
-        <OutputPath>C:\SteamLibrary\steamapps\common\Valheim\BepInEx\plugins\HotPins\</OutputPath>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-        <DebugType>pdbonly</DebugType>
-        <Optimize>true</Optimize>
-        <OutputPath>bin\</OutputPath>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <!-- Files to compile -->
-        <Compile Include="Pins\AddPin.cs" />
-        <Compile Include="GameClasses\GameMinimap.cs" />
-        <Compile Include="GameClasses\GamePlayer.cs" />
-        <Compile Include="GameClasses\GameTerminal.cs" />
-        <Compile Include="Master.cs" />
-        <Compile Include="Pins\Pin.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
-
-        <!-- FContent Files -->
-        <Content Include="libs\0Harmony.dll" />
-        <Content Include="libs\assembly_valheim.dll" />
-        <Content Include="libs\BepInEx.dll" />
-        <Content Include="libs\UnityEngine.CoreModule.dll" />
-        <Content Include="libs\UnityEngine.dll" />
-
-        <!-- Embeded Resource -->
-        <EmbeddedResource Include="templates\Flame.HotPins.cfg" />
-
-        <!-- References -->
-        <Reference Include="0Harmony, Version=2.2.2.0, Culture=neutral, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
-            <HintPath>libs\0Harmony.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
-        <Reference
-            Include="assembly_valheim, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
-            <HintPath>libs\assembly_valheim.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
-        <Reference Include="BepInEx, Version=5.4.19.0, Culture=neutral, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
-            <HintPath>libs\BepInEx.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
-        <Reference Include="System" />
-        <Reference
-            Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
-            <HintPath>libs\UnityEngine.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
-        <Reference
-            Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
-            <HintPath>libs\UnityEngine.CoreModule.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
-        <Reference Include="UnityEngine.InputLegacyModule">
-            <HintPath>libs\UnityEngine.InputLegacyModule.dll</HintPath>
-            <Private>False</Private>
-        </Reference>
-    </ItemGroup>
-    
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <!-- General properties -->
+  <PropertyGroup>
+    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{A54EAD47-A0E4-471F-91DC-904BF21E3F0E}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>HotPins</RootNamespace>
+    <AssemblyName>HotPins</AssemblyName>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
+  </PropertyGroup>
+  <!-- Properties for Debug and Release -->
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>C:\SteamLibrary\steamapps\common\Valheim\BepInEx\plugins\HotPins\</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <!-- Files to compile -->
+    <Compile Include="Pins\AddPin.cs" />
+    <Compile Include="GameClasses\GameMinimap.cs" />
+    <Compile Include="GameClasses\GamePlayer.cs" />
+    <Compile Include="GameClasses\GameTerminal.cs" />
+    <Compile Include="Master.cs" />
+    <Compile Include="Pins\Pin.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <!-- FContent Files -->
+    <None Include="libs\0Harmony.dll" />
+    <None Include="libs\assembly_valheim.dll" />
+    <None Include="libs\BepInEx.dll" />
+    <None Include="libs\UnityEngine.CoreModule.dll" />
+    <None Include="libs\UnityEngine.dll" />
+    <!-- Embeded Resource -->
+    <EmbeddedResource Include="templates\Flame.HotPins.cfg" />
+    <!-- References -->
+    <Reference Include="0Harmony, Version=2.2.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>libs\0Harmony.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="assembly_valheim, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>libs\assembly_valheim.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="BepInEx, Version=5.4.19.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>libs\BepInEx.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>libs\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>libs\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.InputLegacyModule">
+      <HintPath>libs\UnityEngine.InputLegacyModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
