--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,3 @@
-custom: [qiwi.com/p/79628720667]
+liberapay: Flame
+custom: ['qiwi.com/p/79628720667', 'buymeacoffee.com/andrewflame']
+patreon: Andrew_Flame
