Add the correct way to get the path of the configuration file

--- a/templates/Flame.HotPins.cfg
+++ b/templates/Flame.HotPins.cfg
@@ -1,4 +1,5 @@
 [binds]
+# To edit this config file, it is advisable to open it in any plain text editor
 # To create a bind, you need to make an entry of the following type:
 # UnityKeyCode = "Pin Type" "Pin Name"
 # You can view all UnityKeyCodes here: https://t.ly/dMe2
