Update the standard configuration file

--- a/templates/Flame.HotPins.cfg
+++ b/templates/Flame.HotPins.cfg
@@ -7,9 +7,9 @@
 # As the pin name you can use any string
 
 # You can use single keys for binds
-Keypad1 = "Hammer" "Burial Chambers"
+Keypad1 = "Hammer" "Burial Chamber"
 Keypad2 = "Hammer" "Troll Cave"
-Keypad3 = "Hammer" "Sunken Crypts"
+Keypad3 = "Hammer" "Sunken Crypt"
 Keypad4 = "Hammer" "Frost Cave"
 Keypad5 = "Hammer" "Fuling Village"
 Keypad6 = "Hammer" "Infested mine"
