Update default config file

--- a/templates/Flame.HotPins.cfg
+++ b/templates/Flame.HotPins.cfg
@@ -1,5 +1,34 @@
-[binds]
-# To edit this config file, it is advisable to open it in any plain text editor
+## HotPins configuration file <v1.5.0>
+## Author: Flame
+
+[AutoPins]
+## A key for the ability to automatically mark dungeons on the map
+## You can view all UnityKeyCodes here: https://t.ly/dMe2. To add one or more modifier keys, separate them with '+'
+# Setting type: KeyboardShortcut
+# Default value: G
+AutoPinKey = G
+
+## Changes the radius at which the dungeons will be marked automatically
+# Setting type: Single
+# Default value: 15
+AutoPinRadius = 15
+
+## The name of the type in the entrypoint assembly to search for the entrypoint method.
+# Setting type: String
+# Default value: Hammer
+AutoPinType = Hammer
+
+## Names of automatic pins for dungeons
+# Setting type: String
+BurialChamber = Burial Chamber
+TrollCave = Troll Cave
+SunkenCrypt = Sunken Crypt
+FrostCave = Frost Cave
+FulingVillage = Fuling Village
+InfestedMine = Infested Mine
+
+[Binds]
+# To edit this section, it is advisable to open it in any plain text editor
 # To create a bind, you need to make an entry of the following type:
 # UnityKeyCode = "Pin Type" "Pin Name"
 # You can view all UnityKeyCodes here: https://t.ly/dMe2
@@ -12,7 +41,7 @@ Keypad2 = "Hammer" "Troll Cave"
 Keypad3 = "Hammer" "Sunken Crypt"
 Keypad4 = "Hammer" "Frost Cave"
 Keypad5 = "Hammer" "Fuling Village"
-Keypad6 = "Hammer" "Infested mine"
+Keypad6 = "Hammer" "Infested Mine"
 
 # Or you can use keyboard shortcuts. For this use "+" sign
 LeftAlt+Keypad1 = "Ball" "Copper"
