Add configuration support for AutoPins

--- a/templates/Flame.HotPins.cfg
+++ b/templates/Flame.HotPins.cfg
@@ -3,8 +3,8 @@
 
 [AutoPins]
 ## A key for the ability to automatically mark dungeons on the map
-## You can view all UnityKeyCodes here: https://t.ly/dMe2. To add one or more modifier keys, separate them with '+'
-# Setting type: KeyboardShortcut
+## You can view all UnityKeyCodes here: https://t.ly/dMe2
+# Setting type: KeyCode
 # Default value: G
 AutoPinKey = G
 
