--- a/templates/Flame.HotPins.cfg
+++ b/templates/Flame.HotPins.cfg
@@ -1,31 +1,5 @@
-## HotPins configuration file <v1.5.0>
-## Author: Flame
-
-[AutoPins]
-## A key for the ability to automatically mark dungeons on the map
-## You can view all UnityKeyCodes here: https://t.ly/dMe2
-# Setting type: KeyCode
-# Default value: G
-AutoPinKey = G
-
-## Changes the radius at which the dungeons will be marked automatically
-# Setting type: Single
-# Default value: 15
-AutoPinRadius = 15
-
-## The name of the type in the entrypoint assembly to search for the entrypoint method.
-# Setting type: String
-# Default value: Hammer
-AutoPinType = Hammer
-
-## Names of automatic pins for dungeons
-# Setting type: String
-BurialChamber = Burial Chamber
-TrollCave = Troll Cave
-SunkenCrypt = Sunken Crypt
-FrostCave = Frost Cave
-FulingVillage = Fuling Village
-InfestedMine = Infested Mine
+## Settings file was created by plugin HotPins v1.5.0
+## Plugin GUID: Flame.HotPins
 
 [Binds]
 # To edit this section, it is advisable to open it in any plain text editor
@@ -50,3 +24,29 @@ LeftAlt+Keypad3 = "Ball" "Guck"
 LeftAlt+Keypad4 = "Ball" "Silver"
 LeftAlt+Keypad5 = "Ball" "Tar"
 LeftAlt+Keypad6 = "Ball" "Marble"
+
+[AutoPins]
+## A key for the ability to automatically mark dungeons on the map
+# Setting type: KeyCode
+# Default value: G
+AutoPinKey = G
+
+## Changes the radius at which the dungeons will be marked automatically
+# Setting type: Single
+# Default value: 15
+AutoPinRadius = 15
+
+## The name of the pin type for automatically mark dungeons
+## Available pin types: Fireplace, House, Hammer, Ball, Cave
+# Setting type: String
+# Default value: Hammer
+AutoPinType = Hammer
+
+## Names of automatic pins for dungeons
+# Setting type: String
+BurialChamber = Burial Chamber
+TrollCave = Troll Cave
+SunkenCrypt = Sunken Crypt
+FrostCave = Frost Cave
+FulingVillage = Fuling Village
+InfestedMine = Infested Mine
