--- a/HotPins.csproj
+++ b/HotPins.csproj
@@ -14,7 +14,7 @@
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>11.0</LangVersion>
   </PropertyGroup>
   <!-- Properties for Debug and Release -->
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
