Added the ability to disable automatic pins

--- a/templates/Flame.HotPins.cfg
+++ b/templates/Flame.HotPins.cfg
@@ -42,6 +42,11 @@ AutoPinRadius = 15
 # Default value: Hammer
 AutoPinType = Hammer
 
+## Is the ability to automatically set pins by pressing a key enabled
+# Setting type: Boolean
+# Default value: true
+AutoPinEnabled = true
+
 ## Names of automatic pins for dungeons
 # Setting type: String
 BurialChamber = Burial Chamber
